--- a/templates/home.html
+++ b/templates/home.html
@@ -12,7 +12,7 @@
 		<div id="brandname">
 			Machine Learning App with Flask
 		</div>
-		<h2>Spam Detector For SMS Messages</h2>
+		<h2>Automatic Ticket Classification Tool</h2>
 		
 	</div>
 	</header>
