--- a/templates/result.html
+++ b/templates/result.html
@@ -9,9 +9,9 @@
 	<header>
 		<div class="container">
 		<div id="brandname">
-			ML App
+			GL
 		</div>
-		<h2>Spam Detector For SMS Messages</h2>
+		<h2>Automatic Ticket Classification Tool</h2>
 		
 	</div>
 	</header>
@@ -19,12 +19,12 @@
 	<div class="results">
 
 
-		
-	{% if prediction == 1%}
+	<h2 style="color:blue;">Group % prediction %</h2>	
+	<!-- {% if prediction == 1%}
 	<h2 style="color:red;">Spam</h2>
 	{% elif prediction == 0%}
-	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2>
-	{% endif %}
+	<h2 style="color:blue;">Not a Spam (It is a Ham)</h2> 
+	{% endif %}-->
 
 	</div>
 
