--- a/templates/result.html
+++ b/templates/result.html
@@ -19,7 +19,7 @@
 	<div class="results">
 
 
-	<h2 style="color:blue;">Group % prediction %</h2>	
+	<h2 style="color:blue;"> The request is forwarded to Group: {{ prediction }}</h2>	
 	<!-- {% if prediction == 1%}
 	<h2 style="color:red;">Spam</h2>
 	{% elif prediction == 0%}
